--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,15 @@ Jinja2==2.10
 Markdown==2.6.11
 mccabe==0.6.1
 nose==1.3.7
-numpy==1.15.0
+numpy==1.15.4
+pandas
 pathlib==1.0.1
 pew==1.1.0
 pipenv==8.2.7
 pycodestyle==2.3.1
 pyflakes==1.5.0
 requests==2.18.4
+sklearn
 shutilwhich==1.1.0
 urllib3==1.22
 virtualenv==15.1.0
